fixes header alignment on mobile

--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ a:active {
   }
   .page-title {
     font-size: 45px;
-    text-align: center;
+    text-align: left;
   }
   .page-title::after {
     top: -5px;
